# tabdiff

./: Cargo.toml  LICENSE  README.md
example/: a.csv
src/: a.csv  b.csv  diff.rs  main.rs  opts.rs  print.rs  tab.rs
